# create toml file

[project]

name = "concepts-packaging-versioning"

version = "0.1.0"

description = "Learning packaging and versioning"

authors = [

    { name = "suhas", email = "ishwarcmullur888@gmail.com" }

]

readme = "README.md"

requires-python = ">=3.10"

dependencies = [

    "typer>=0.9.0",
    "click>=8.0.0"

]
 
[project.optional-dependencies]

dev = [

    "pytest>=8.0.0",

    "black>=24.0.0",

    "isort>=5.0.0"

]
 
[build-system]

requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"
 
 
[tool.black]

line-length = 88

target-version = ["py313"]
 
[tool.isort]

profile = "black"
 
 
 